Added dosa.html to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <a href="recipes/lasagna.html"><img src="images/Lasagna_(1).jpg" alt="A delicious looking cheese lasagna" width="300" height="300"></a> 
         <a href="recipes/orange_chicken.html"><img src="images/orange_chicken.jpg" alt="Delicious chicken topped with lemon and other garnish cooked in American-Chinese Style" width="300" height="300"></a>
+        <a href="recipes/dosa.html"><img src="images/dosa.jpg" alt="Delicious Dosa" width="300" height="300"></a>
     </ul>
 </body>
 </html>
